<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <include layout="@layout/toolbar_generic_layout"/>

    <!-- Espaço de texto para inserir o nome da regra -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/action_all_directions_padding"
        android:focusableInTouchMode="true"
        >
      <TextView
          android:id="@+id/rule_name_descriptor_textview"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:padding="@dimen/action_all_directions_padding"
          android:text="@string/named_rule_descriptor"
          android:textColor="@color/colorPrimary"
          android:textAllCaps="true"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textStyle="bold"
          android:layout_weight=".2"
          />
    <EditText
        android:id="@+id/rule_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:padding="@dimen/action_all_directions_padding"
        android:layout_weight=".8"
        />
    </LinearLayout>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/details_of_condition_label"
      android:textColor="@color/colorPrimary"
      android:textAllCaps="true"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:textStyle="bold"
      android:layout_gravity="center"
      android:layout_margin="@dimen/action_all_directions_padding"
      />


  <FrameLayout
      android:id="@+id/base_condition_container"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_margin="@dimen/action_all_directions_padding"
      android:layout_weight=".3"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_margin="@dimen/action_all_directions_padding"
      >

    <Button
        android:id="@+id/add_action_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@color/colorAccent"
        android:text="@string/choose_actions_button"
        android:textColor="@android:color/white"
        android:layout_weight=".3"
        android:padding="@dimen/action_all_directions_padding"
        />

    <Button
        android:id="@+id/create_rule_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@color/success"
        android:text="@string/create_rule_button"
        android:textColor="@android:color/white"
        android:layout_weight="0.21"
        android:padding="@dimen/action_all_directions_padding"
        />
    <Button
        android:id="@+id/add_condition_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_margin="3dp"
        android:text="@string/choose_condition_button"
        android:textColor="@android:color/white"
        android:layout_weight=".3"
        android:padding="@dimen/action_all_directions_padding"
        />

  </LinearLayout>

</LinearLayout>

